--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@ body {
   line-height: 1.5;
   padding-top: 32px;
   padding-bottom: 32px;
-}d
+}
 
 P {
-  color: red;
+  color: darkorchid;
   margin-bottom: 12px;
 }
 
